[package]
name = "password_generator"
version = "0.1.0"
authors = ["MFRIbrahim <Mustafa.Ibrahim@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.3", features = ["getrandom"] }
clap = "2.33.3"
